examples/test/conf/EdgionPlugins/ProxyRewrite/01_EdgionPlugins_uri-simple.yaml
# 1. URI 
apiVersion: edgion.io/v1
kind: EdgionPlugins
metadata:
  name: proxy-rewrite-uri-simple
  namespace: edgion-default
spec:
  requestPlugins:
    - enable: true
      type: ProxyRewrite
      config:
        uri: "/internal/api/v2"
