examples/test/conf/EdgionPlugins/ProxyRewrite/02_EdgionPlugins_uri-var.yaml
# 2. URI + $uri 
apiVersion: edgion.io/v1
kind: EdgionPlugins
metadata:
  name: proxy-rewrite-uri-var
  namespace: edgion-default
spec:
  requestPlugins:
    - enable: true
      type: ProxyRewrite
      config:
        uri: "/prefix$uri/suffix"
