examples/test/conf/EdgionPlugins/ProxyRewrite/03_EdgionPlugins_uri-arg.yaml
# 3. URI + $arg_xxx 变量
apiVersion: edgion.io/v1
kind: EdgionPlugins
metadata:
  name: proxy-rewrite-uri-arg
  namespace: edgion-default
spec:
  requestPlugins:
    - enable: true
      type: ProxyRewrite
      config:
        uri: "/search/$arg_keyword/$arg_lang"
  upstreamResponseFilterPlugins:
    - enable: true
      type: DebugAccessLogToHeader
      config: {}
