examples/test/conf/EdgionPlugins/ProxyRewrite/HTTPRoute_default_proxy-rewrite.yaml
# HTTPRoute for ProxyRewrite 
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-rewrite-test-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "proxy-rewrite.example.com"
  rules:
    # 1. URI 
    - matches:
        - path:
            type: PathPrefix
            value: /uri/simple
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-uri-simple
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 2. URI + $uri 
    - matches:
        - path:
            type: PathPrefix
            value: /uri/var
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-uri-var
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 3. URI + $arg_xxx 
    - matches:
        - path:
            type: PathPrefix
            value: /uri/arg
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-uri-arg
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 4. Regex URI 
    - matches:
        - path:
            type: PathPrefix
            value: /regex/users/
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-regex
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 5. ：Host + Method + Headers
    - matches:
        - path:
            type: PathPrefix
            value: /combined
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-combined
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001

    # 6. Path  (: /params/:uid/info)
    - matches:
        - path:
            type: RegularExpression
            value: "^/params/[^/]+/info$"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: proxy-rewrite-path-param
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
